# CortexLab

./: main.py  pyproject.toml
.ipynb_checkpoints/: ResumeExtract-bkp-checkpoint.ipynb  ResumeExtract-checkpoint.ipynb  requirements-checkpoint.txt
Assignment-2/: Idea_Assistant.ipynb  pyproject.toml  requirements.txt
Assignment-2/.gradio/flagged/: dataset1.csv
Assignment-2/.ipynb_checkpoints/: Idea_Assistant-bkp-checkpoint.ipynb
Assignment-2/Data/: project_guide.md
Assignment-3/: RAG Chatbot-Copy1.ipynb  RAG Chatbot.ipynb  RAG_Chatbot.ipynb  RAG_Chatbot_2.ipynb  pyproject.toml  requirements.txt
Assignment-3/.gradio/flagged/: dataset1.csv
Assignment-3/.ipynb_checkpoints/: RAG Chatbot-checkpoint.ipynb  pyproject-checkpoint.toml
