[project]
name = "cortexlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "pandas>=2.3.2",
]

[tool.uv.workspace]
members = [
    "Assignment-2",
]
