[project]
name = "assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "gradio>=5.43.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "llama-index>=0.12.52",
    "pandas>=2.3.2",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
]
